force-app/main/default/objects/IM_Opportunity_Forecast__c/IM_Opportunity_Forecast__c.object-meta.xml
<CustomObject>
    <description>Corresponds to OpportunityLineItem standard table</description>
    <label>Opportunity Forecast</label>
    <nameField>
        <label>Opportunity Forecast Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Forecasts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>