force-app/main/default/objects/IM_Opportunity_Forecast__c/fields/Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product__c</fullName>
    <formula>HYPERLINK( OpportunityLineItemId__c , &quot;Opportunity Product Record (&quot; &amp; OpportunityLineItemId__c &amp; &quot;)&quot; , &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Product</label>
    <type>Text</type>
</CustomField>