force-app/main/default/objects/IM_Opportunity_Forecast__c/fields/OpportunityLineItemId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityLineItemId__c</fullName>
    <externalId>true</externalId>
    <label>OpportunityLineItemId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>