force-app/main/default/objects/IM_Opportunity_Forecast__c/fields/OpportunityLineItemScheduleId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityLineItemScheduleId__c</fullName>
    <label>OpportunityLineItemScheduleId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>